--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -15,15 +15,21 @@
         <link rel="stylesheet" href="components/normalize-css/normalize.css">
         <link rel="stylesheet" href="css/application.css">
         <link rel="stylesheet" href="components/icomoon/style.css">
-        <script src="components/vendor/modernizr/modernizr.js"></script>
+        <script src="components/modernizr/modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        {{> body }}
-
+        <div class="all-wrapper">
+            <header>
+            </header>
+            <div class="main">
+                {{> body }}
+            </div>
+            <footer>
+            </footer>
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="components/jquery/dist/jquery.js"><\/script>')</script>
         <script src="js/application.js"></script>
