Added stylesheets for forms and buttons. Finished the footer styling for now. Introduced new Lato font in the process.

--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -9,7 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="components/normalize-css/normalize.css">
         <link rel="stylesheet" href="css/application.css">
         <link rel="stylesheet" href="components/icomoon/style.css">
@@ -24,13 +24,13 @@
                             <a href="/">
                                 <h1 id="logo">Redlight</h1>
                             </a>
-                            <nav class="desktop">
+{{!--                             <nav class="desktop">
                                 <ul>
                                     <li>Home</li>
                                     <li>Products</li>
                                     <li>About</li>
                                 </ul>
-                            </nav>
+                            </nav> --}}
                         </div>
                         <div class="fourcol last">
                             <ul>
@@ -49,38 +49,70 @@
                 <div class="container">
                     <div class="row">
                         <div class="fourcol">
-                            <h2>Redlight</h2>
-                            <p>Lorem break it down dolor sit amizzle, i'm in the shizzle adipiscing elit. Nullam sapizzle velizzle, aliquet volutpizzle, suscipit quis, gravida vizzle, arcu. Pellentesque bling bling pimpin'.</p>
+                            <h2>STORE</h2>
+                            <p>Redlight theme © Copyright 2014 <br/>Tom Dallimore.</p>
+                            <p>Licenced under the MIT licence.</p>
+                            <p>VAT number: 000 1234 56</p>
                         </div>
                         <div class="fourcol">
-                            <h2>Navigation</h2>
+                            <h2>INFO</h2>
                             <ul>
                                 <li>Home</li>
-                                <li>Products</li>
                                 <li>About</li>
+                                <li>Products</li>
                                 <li>Terms &amp; conditions</li>
                                 <li>Privacy policy</li>
                             </ul>
                         </div>
                         <div class="fourcol last">
-                            <h2>Contact information</h2>
-                            Redlight Ltd.
-                            <br>
-                            24 Bixton Street
-                            <br>
-                            London, UK
-                            <br><br>
-                            01225 764512
-                            <br>
-                            hello@redlighttheme.com
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="sixcol">
-                            Redlight theme © Copyright 2014 Tom Dallimore. Licenced under the MIT licence.
-                        </div>
-                        <div class="sixcol last">
-                            VAT number: 000 1234 56
+                            <h2>SOCIAL</h2>
+                            <p>Signup to our newsletter and keep in touch.</p>
+                            <form action="#" role="form">
+                                <input type="text" class="form-control">
+                                <input type="submit" value="OK" class="btn btn-normal">
+                            </form>
+                            <ul>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-tumblr"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-vimeo"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-youtube"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-google-plus"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon-feed-2"></i>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
