Further development on header and adding the skeleton HTML content.

--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -20,23 +20,27 @@
             <header>
                 <div class="container">
                     <div class="row">
-                        <div class="eightcol">
-                            <a href="/">
-                                <h1 id="logo">Redlight</h1>
+                        <div class="twelvecol">
+                            <a href="/" id="logo">
+                                <h1></h1>
                             </a>
-{{!--                             <nav class="desktop">
+                            <nav class="desktop">
                                 <ul>
-                                    <li>Home</li>
-                                    <li>Products</li>
-                                    <li>About</li>
+                                    <li class="active"><a href="#">Home</a></li>
+                                    <li><a href="#">Jeans</a></li>
+                                    <li><a href="#">Jewellery</a></li>
+                                    <li><a href="#">Bags</a></li>
+                                    <li><a href="#">Accessories</a></li>
+                                    <li><a href="#">New</a></li>
+
                                 </ul>
-                            </nav> --}}
-                        </div>
-                        <div class="fourcol last">
-                            <ul>
-                                <li title="search"><i class="icon-search"></i></li>
-                                <li title="basket"><i class="icon-cart"></i></li>
+                            </nav>
+                            <ul id="quick-bar">
+                                <li title="basket" class="active">
+                                    <span>13</span>
+                                </li>
                                 <li title="menu" class="mobile"></li>
+                                <li title="search"></li>
                             </ul>
                         </div>
                     </div>
