--- a/app/pages/search.hbs
+++ b/app/pages/search.hbs
@@ -1,1 +1,46 @@
-<h2> SEARCH TING</h2>
+<div class="row">
+    {{!
+        Filter options
+    }}
+    <section id="sidebar" class="threecol">
+
+    </section>
+    {{!
+        Search results
+    }}
+    <section id="content" class="ninecol last">
+        <div class="row">
+            {{!
+                Search header
+            }}
+            <div class="fourcol">
+            </div>
+            {{!
+                Select sort by
+            }}
+            <div class="fivecol last">
+
+            </div>
+        </div>
+        {{! 
+            Products
+        }}
+        <div class="row">
+            <div class="threecol">
+
+            </div>
+            <div class="threecol">
+
+            </div>
+            <div class="threecol">
+
+            </div>
+            <div class="threecol">
+
+            </div>
+            <div class="threecol">
+
+            </div>
+        </div>
+    </section>
+</div>
