--- a/app/src/sass/_base.scss
+++ b/app/src/sass/_base.scss
@@ -1,11 +1,14 @@
-*, *:before, *:after {
+*, *:before, *:after
+{
     @include box-sizing(border-box);
     -webkit-font-smoothing: antialiased;
 }
-html, body {
+html, body 
+{
     font-size:100%;
 }
-body {
+body 
+{
     font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: normal;
     font-style: normal;
@@ -13,23 +16,46 @@ body {
     line-height: 1.65em;
     font-size: 12px;
     letter-spacing: 1px;
+    margin:0;
 }
-h2 {
+h2 
+{
     font-family: 'Lato', sans-serif;
     letter-spacing: 2px;
     font-size:14px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin:0 0 20px;
 }
-p {
+p 
+{
     margin:0 0 10px;
 }
-ul {
+ul 
+{
     list-style-type: none;
     padding:0;
     margin:0;
 }
-a {
+a 
+{
     text-decoration: none;
     color: $dark-grey;
+}
+.desktop 
+{
+    display: block;
+}
+.mobile 
+{
+    display: none !important;
+}
+[role="main"] 
+{
+    padding: 110px 30px 30px;
+}
+.hover-color 
+{
+    @include transition-property(color);
+    @include transition-duration(0.3s);
+    @include transition-timing-function(ease-in);
 }
