--- a/app/src/sass/_form.scss
+++ b/app/src/sass/_form.scss
@@ -1,6 +1,8 @@
-form {
+form 
+{
 
-    .form-control {
+    .form-control 
+    {
         height:33px;
         display: inline-block;
         width:215px;
