--- a/app/src/sass/_header.scss
+++ b/app/src/sass/_header.scss
@@ -1,4 +1,128 @@
-header {
+header 
+{
     background-color: $light-grey;
-    height:75px;
+    height:80px;
+    padding:15px 0;
+    overflow:hidden;
+    position:fixed;
+    width:100%;
+
+    .container 
+    {
+
+        .row 
+        {
+            overflow: visible;
+            .twelvecol 
+            {
+
+                #logo 
+                {
+                    float:left;
+                }
+                nav 
+                {
+                    float:left;
+                    padding-left: 30px;
+
+                        ul 
+                        {
+                            height:50px;
+                            padding:15px 0;
+
+                            li 
+                            {
+                                display: inline-block;
+                                vertical-align: middle;
+                                text-transform: uppercase;
+                                font-weight: bold;
+                                margin-right:30px;
+                                font-family: 'Lato', sans-serif;
+                                position: relative;
+
+                                &:last-child 
+                                {
+                                    padding:0;
+                                }
+                                &.active:after, &:hover:after 
+                                {
+                                    content: "";
+                                    border-top:4px solid $blue;
+                                    position: absolute;
+                                    bottom:-30px;
+                                    left:-3px;
+                                    width:100%;
+                                    padding:0 6px 0 0;
+                                    @include box-sizing(initial);
+                                }
+                            }
+                        }
+                }
+
+                ul#quick-bar 
+                {
+                    position: relative;
+                    li 
+                    {
+                        height:50px;
+                        width:50px;
+                        display: inline-block;
+                        cursor: pointer;
+                        outline: 0;
+                        margin-right: 7px;
+                        float:right;
+
+                        &[title="search"] 
+                        {
+                            @extend .shared-search-off;
+
+                            &:hover, &.active 
+                            {
+                                @extend .shared-search-on;
+                            }
+                        }
+                        &[title="basket"] 
+                        {
+                            @extend .shared-basket-off;
+                            margin-right:0;
+
+                            span 
+                            {
+                                display:none;
+                                height:23px;
+                                width:23px;
+                                text-align: center;
+                                vertical-align: middle;
+                                top:-5px;
+                                right:-6px;
+                                background-color: $blue;
+                                position: absolute;
+                                @include border-radius(16px);
+                                color:#fff;
+                                line-height: 2em;
+                            }
+                            &.active 
+                            {
+                                @extend .shared-basket;
+
+                                span 
+                                {
+                                    display: block;
+                                }
+                            }
+                        }
+                        &[title="menu"] 
+                        {
+                            @extend .shared-menu-off;
+
+                            &:hover, &.active 
+                            {
+                                @extend .shared-menu-on;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
