--- a/app/pages/product.hbs
+++ b/app/pages/product.hbs
@@ -43,13 +43,22 @@
 }}
 <div class="row">
     <div class="twelvecol">
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#description" data-toggle="tab">Description</a></li>
+        </ul>
 
+        <div class="tab-content">
+          <div class="tab-pane active" id="description">
+              Lorizzle ipsizzle dolor black shizzle my nizzle crocodizzle, consectetuer adipiscing tellivizzle. Nullizzle sapizzle velizzle, funky fresh volutpat, suscipizzle quizzle, gravida vel, arcu. Pellentesque shizznit gangster. Sed dizzle. Black fo shizzle mah nizzle fo rizzle, mah home g-dizzle dang doggy turpis tempus own yo'. Mauris pellentesque nibh yippiyo the bizzle. Boofron sheezy tortizzle. Pellentesque ma nizzle uhuh ... yih! ass. Shiz yippiyo habitasse platea dictumst. Dang dapibizzle. Own yo' tellizzle rizzle, pretizzle eu, mattis daahng dawg, eleifend vitae, shut the shizzle up. Crunk suscipit. Integizzle i'm in the shizzle velit sizzle black.
+          </div>
+        </div>
     </div>
 </div>
 {{!
     Related products
 }}
 <div class="row">
+    <h3>Related products</h3>
     <div class="threecol">
         <div class="single-product">
             <img src="http://placehold.it/250x250"/>
@@ -76,7 +85,7 @@
             <img src="http://placehold.it/250x250"/>
             <h2>Product name</h2>
             <h3>£90.23</h3>
-        </div>w
+        </div>
     </div>
 </div>
 
