--- a/app/pages/search.hbs
+++ b/app/pages/search.hbs
@@ -27,19 +27,39 @@
         }}
         <div class="row">
             <div class="threecol">
-
+                <div class="single-product">
+                    <img src="http://placehold.it/250x250"/>
+                    <h2>Product name</h2>
+                    <h3>£90.23</h3>
+                </div>
             </div>
             <div class="threecol">
-
+                <div class="single-product">
+                    <img src="http://placehold.it/250x250"/>
+                    <h2>Product name</h2>
+                    <h3>£90.23</h3>
+                </div>
             </div>
             <div class="threecol">
-
+                <div class="single-product">
+                    <img src="http://placehold.it/250x250"/>
+                    <h2>Product name</h2>
+                    <h3>£90.23</h3>
+                </div>
             </div>
             <div class="threecol">
-
+                <div class="single-product">
+                    <img src="http://placehold.it/250x250"/>
+                    <h2>Product name</h2>
+                    <h3>£90.23</h3>
+                </div>
             </div>
             <div class="threecol">
-
+                <div class="single-product">
+                    <img src="http://placehold.it/250x250"/>
+                    <h2>Product name</h2>
+                    <h3>£90.23</h3>
+                </div>
             </div>
         </div>
     </section>
