Added JS events to switch between the mobile menu and search functionality. Added DOM elements for the mobile menu.

--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -49,6 +49,14 @@
                                 </div>
                                 <input type="submit">
                             </form>
+                            <ul class="mobile">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li><a href="#">Jeans</a></li>
+                                <li><a href="#">Jewellery</a></li>
+                                <li><a href="#">Bags</a></li>
+                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#">New</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
