--- a/app/src/sass/_base.scss
+++ b/app/src/sass/_base.scss
@@ -2,6 +2,7 @@
 {
     @include box-sizing(border-box);
     -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 html, body 
 {
