Improved the mobile menu dropdown to be intuitive and assign the correct height depending on the number of items in the menu. Cleaned up some of the header syntax and ensured the menu selector logic is intialized when adjusting from mobile to desktop size, alongside closing the dropdown mobile menu if required.

--- a/app/src/sass/_base.scss
+++ b/app/src/sass/_base.scss
@@ -18,6 +18,24 @@ body
     font-size: 12px;
     letter-spacing: 1px;
     margin:0;
+
+    &.search-active 
+    {
+
+        nav 
+        {
+            display: none;
+        }
+        form#search 
+        {
+            display: block !important;
+        }
+    }
+
+    &.menu-active
+    {
+        overflow: hidden;
+    }
 }
 h2 
 {
