--- a/app/src/sass/application.scss
+++ b/app/src/sass/application.scss
@@ -4,7 +4,7 @@ $shared-layout:smart;
 @import "shared/*.png";
 
 $blue: #00aff1;
-$light-grey: #FAFAFA;
+$light-grey: #F5F5F5;
 $grey: #E6E6E5;
 $dark-grey: #444444;
 
