Added breadcrumb support.

--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -61,6 +61,15 @@
                     <li><a href="#">New</a></li>
                 </ul>
             </header>
+            <div id="breadcrumbs">
+                <div class="container">
+                    <ul>
+                        <li><a href="#"><i class="icon-home-2"></i></a></li>
+                        <li><a href="#">Jeans</a></li>
+                        <li class="active">Product name</li>
+                    </ul>
+                </div>
+            </div>
             <div class="container" role="main">
                 {{> body }}
             </div>
@@ -76,11 +85,11 @@
                         <div class="fourcol">
                             <h2>INFO</h2>
                             <ul>
-                                <li>Home</li>
-                                <li>About</li>
-                                <li>Products</li>
-                                <li>Terms &amp; conditions</li>
-                                <li>Privacy policy</li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Products</a></li>
+                                <li><a href="#">Terms &amp; conditions</a></li>
+                                <li><a href="#">Privacy policy</a></li>
                             </ul>
                         </div>
                         <div class="fourcol last">
