--- a/app/src/sass/_header.scss
+++ b/app/src/sass/_header.scss
@@ -5,6 +5,7 @@ header
     padding:15px 0;
     overflow:hidden;
     position:fixed;
+    z-index: 5;
     width:100%;
     @include transition-property(height);
     @include transition-duration(0.4s);
@@ -24,7 +25,8 @@ header
                 {
                     float:left;
 
-                    h1 {
+                    h1 
+                    {
                         font-family: 'Pacifico', cursive;
                     }
                 }
@@ -55,7 +57,8 @@ header
                                 }
                             }
                         }
-                        #spot {
+                        #spot 
+                        {
                             content: "";
                             position: absolute;
                             top:10px;
