--- a/app/src/sass/_grid.scss
+++ b/app/src/sass/_grid.scss
@@ -109,7 +109,7 @@ img {
     }
 
     #breadcrumbs {
-        padding:0 20px !important;
+        padding:5px 20px !important;
     }
     
     .row .onecol, .row .twocol, .row .threecol, .row .fourcol, .row .fivecol, .row .sixcol, .row .sevencol, .row .eightcol, .row .ninecol, .row .tencol, .row .elevencol, .row .twelvecol {
